<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/omspillet"
        android:scaleType="centerCrop" />

    <ImageButton
        android:id="@+id/tilbakeKnapp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tilbake"
        android:src="@drawable/left"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_about_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:fontFamily="@font/sassoon"
        android:textColor="@color/omTekst"
        android:paddingTop="57dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/about_game"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>