<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<ImageView
    android:id="@+id/background_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    android:src="@drawable/startscreenclean"
    android:scaleType="centerCrop" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/setting"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/setting"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#228B22"
            android:textSize="49sp"
            android:textStyle="bold"
            android:fontFamily="@font/sassoon"
            android:shadowColor="#FFFFFF"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="6"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/KnappStartSpill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sassoon"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/OmSpillet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/om"
            android:textSize="30sp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sassoon"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>