<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/spilletbg"
        android:scaleType="centerCrop" />

    <ImageButton
        android:id="@+id/tilbakeKnapp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tilbake"
        android:src="@drawable/left"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/mathQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Matte spørsmål her"
        android:textColor="@color/omTekst"
        android:fontFamily="@font/sassoon"
        android:textSize="29sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/answerField"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="40sp"
        android:inputType="number"
        android:focusable="false"
        android:background="@color/omTekst"
        android:fontFamily="@font/sassoon"
        app:layout_constraintTop_toBottomOf="@+id/mathQuestion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/checkAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sjekk"
        android:layout_margin="10dp"
        android:fontFamily="@font/sassoon"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <GridLayout
        android:id="@+id/tallKnapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="3"
        app:layout_constraintTop_toBottomOf="@+id/answerField"
        app:layout_constraintBottom_toTopOf="@+id/checkAnswerButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@integer/en"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@integer/to"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@integer/tre"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@integer/fire"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@integer/fem"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@integer/seks"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@integer/sju"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@integer/atte"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@integer/ni"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/i_spillet_knapper"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@integer/noll"
            android:textSize="26sp"/>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>